// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsView should render check for updates completed, with everything up to date 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  >
    <div
      class="with-scrollbar"
    >
      <div
        class="content-container"
      >
        <div
          class="settings-pane-container"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Updates
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Check for updates
                  </button>
                </div>
              </div>
              <p
                class="small text-muted"
              />
              <div
                class="toggle"
              >
                <label
                  for="checkForUpdates"
                >
                  <span
                    class="toggle-label"
                  >
                    Check for updates at startup
                  </span>
                  <div
                    class="toggle-bar toggle-bar-primary-toggled"
                  >
                    <input
                      aria-checked="true"
                      checked=""
                      id="checkForUpdates"
                      type="checkbox"
                    />
                    <span
                      class="toggle-handle toggle-handle-toggled toggle-handle-primary-toggled"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="card"
            id="app-sources"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    App sources
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Add source
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="card"
            id="app-sources"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Authentication
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Set
                     token
                  </button>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="small text-muted col"
                >
                  To access restricted app sources from Nordic Semiconductor, get an identity token from
                   
                  <a
                    class="tw-preflight tw-text-nordicBlue hover:tw-underline"
                    href="https://files.nordicsemi.com/ui/user_profile"
                    rel="noreferrer noopener"
                    target="_blank"
                  >
                    Nordic Semiconductor JFrog portal
                  </a>
                  .
                </div>
              </div>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Mainland China app server
                  </div>
                </div>
              </div>
              <p
                class="small text-muted"
              >
                For all publicly available apps, use the server
                 
                <a
                  class="tw-preflight tw-text-nordicBlue hover:tw-underline"
                  href="https://files.nordicsemi.cn/"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  https://files.nordicsemi.cn/
                </a>
                , which has a better connection in the People‘s Republic of China.
              </p>
              <div
                class="toggle"
              >
                <label>
                  <span
                    class="toggle-label"
                  >
                    Use Mainland China app server
                  </span>
                  <div
                    class="toggle-bar toggle-bar-primary"
                  >
                    <input
                      aria-checked="false"
                      type="checkbox"
                    />
                    <span
                      class="toggle-handle toggle-handle-primary"
                      style="background-color: white;"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Usage statistics
                  </div>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="toggle"
                  >
                    <label
                      for="checkForShare"
                    >
                      <span
                        class="toggle-label"
                      >
                        Collect anonymous usage data
                      </span>
                      <div
                        class="toggle-bar toggle-bar-primary"
                      >
                        <input
                          aria-checked="false"
                          id="checkForShare"
                          type="checkbox"
                        />
                        <span
                          class="toggle-handle toggle-handle-primary"
                          style="background-color: white;"
                        />
                      </div>
                    </label>
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Show agreement
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="fade modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="fade dialog  modal show"
    data-focus-visible-added=""
    role="dialog"
    style="display: block;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-dialog-centered"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="tw-flex tw-flex-row"
          >
            <b>
              Update check completed
            </b>
          </div>
        </div>
        <div
          class="tw-select-text modal-body"
        >
          All apps are up to date.
        </div>
        <div
          class="tw-preflight tw-flex tw-flex-row-reverse tw-justify-start tw-gap-2 tw-border-none tw-p-4 modal-footer"
        >
          <button
            class="tw-preflight tw-h-8 tw-px-4 tw-text-sm tw-border tw-border-gray-700 tw-bg-white tw-text-gray-700  active:enabled:tw-bg-gray-50 "
            type="button"
          >
            Got it
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SettingsView should render check for updates completed, with updates available 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  >
    <div
      class="with-scrollbar"
    >
      <div
        class="content-container"
      >
        <div
          class="settings-pane-container"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Updates
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Check for updates
                  </button>
                </div>
              </div>
              <p
                class="small text-muted"
              />
              <div
                class="toggle"
              >
                <label
                  for="checkForUpdates"
                >
                  <span
                    class="toggle-label"
                  >
                    Check for updates at startup
                  </span>
                  <div
                    class="toggle-bar toggle-bar-primary-toggled"
                  >
                    <input
                      aria-checked="true"
                      checked=""
                      id="checkForUpdates"
                      type="checkbox"
                    />
                    <span
                      class="toggle-handle toggle-handle-toggled toggle-handle-primary-toggled"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="card"
            id="app-sources"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    App sources
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Add source
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="card"
            id="app-sources"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Authentication
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Set
                     token
                  </button>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="small text-muted col"
                >
                  To access restricted app sources from Nordic Semiconductor, get an identity token from
                   
                  <a
                    class="tw-preflight tw-text-nordicBlue hover:tw-underline"
                    href="https://files.nordicsemi.com/ui/user_profile"
                    rel="noreferrer noopener"
                    target="_blank"
                  >
                    Nordic Semiconductor JFrog portal
                  </a>
                  .
                </div>
              </div>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Mainland China app server
                  </div>
                </div>
              </div>
              <p
                class="small text-muted"
              >
                For all publicly available apps, use the server
                 
                <a
                  class="tw-preflight tw-text-nordicBlue hover:tw-underline"
                  href="https://files.nordicsemi.cn/"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  https://files.nordicsemi.cn/
                </a>
                , which has a better connection in the People‘s Republic of China.
              </p>
              <div
                class="toggle"
              >
                <label>
                  <span
                    class="toggle-label"
                  >
                    Use Mainland China app server
                  </span>
                  <div
                    class="toggle-bar toggle-bar-primary"
                  >
                    <input
                      aria-checked="false"
                      type="checkbox"
                    />
                    <span
                      class="toggle-handle toggle-handle-primary"
                      style="background-color: white;"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Usage statistics
                  </div>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="toggle"
                  >
                    <label
                      for="checkForShare"
                    >
                      <span
                        class="toggle-label"
                      >
                        Collect anonymous usage data
                      </span>
                      <div
                        class="toggle-bar toggle-bar-primary"
                      >
                        <input
                          aria-checked="false"
                          id="checkForShare"
                          type="checkbox"
                        />
                        <span
                          class="toggle-handle toggle-handle-primary"
                          style="background-color: white;"
                        />
                      </div>
                    </label>
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Show agreement
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="fade modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="fade dialog  modal show"
    data-focus-visible-added=""
    role="dialog"
    style="display: block;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-dialog-centered"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="tw-flex tw-flex-row"
          >
            <b>
              Update check completed
            </b>
          </div>
        </div>
        <div
          class="tw-select-text modal-body"
        >
          One or more updates are available. Go to the apps screen to update.
        </div>
        <div
          class="tw-preflight tw-flex tw-flex-row-reverse tw-justify-start tw-gap-2 tw-border-none tw-p-4 modal-footer"
        >
          <button
            class="tw-preflight tw-h-8 tw-px-4 tw-text-sm tw-border tw-border-gray-700 tw-bg-white tw-text-gray-700  active:enabled:tw-bg-gray-50 "
            type="button"
          >
            Got it
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SettingsView should render the token information 1`] = `
<body
  class=""
  style="padding-right: 0px;"
>
  <div>
    <div
      class="with-scrollbar"
    >
      <div
        class="content-container"
      >
        <div
          class="settings-pane-container"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Updates
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Check for updates
                  </button>
                </div>
              </div>
              <p
                class="small text-muted"
              />
              <div
                class="toggle"
              >
                <label
                  for="checkForUpdates"
                >
                  <span
                    class="toggle-label"
                  >
                    Check for updates at startup
                  </span>
                  <div
                    class="toggle-bar toggle-bar-primary-toggled"
                  >
                    <input
                      aria-checked="true"
                      checked=""
                      id="checkForUpdates"
                      type="checkbox"
                    />
                    <span
                      class="toggle-handle toggle-handle-toggled toggle-handle-primary-toggled"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="card"
            id="app-sources"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    App sources
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Add source
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="card"
            id="app-sources"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Authentication
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Replace
                     token
                  </button>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="small col"
                >
                  ID: 
                  an_id
                  <br />
                  Description: 
                  a token
                  <br />
                  Expires: 
                  1970-01-01T00:01:40.000Z
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-secondary btn-sm"
                    title="Remove identity token"
                    type="button"
                  >
                    Remove
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Mainland China app server
                  </div>
                </div>
              </div>
              <p
                class="small text-muted"
              >
                For all publicly available apps, use the server
                 
                <a
                  class="tw-preflight tw-text-nordicBlue hover:tw-underline"
                  href="https://files.nordicsemi.cn/"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  https://files.nordicsemi.cn/
                </a>
                , which has a better connection in the People‘s Republic of China.
              </p>
              <div
                class="toggle"
              >
                <label>
                  <span
                    class="toggle-label"
                  >
                    Use Mainland China app server
                  </span>
                  <div
                    class="toggle-bar toggle-bar-primary"
                  >
                    <input
                      aria-checked="false"
                      type="checkbox"
                    />
                    <span
                      class="toggle-handle toggle-handle-primary"
                      style="background-color: white;"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Usage statistics
                  </div>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="toggle"
                  >
                    <label
                      for="checkForShare"
                    >
                      <span
                        class="toggle-label"
                      >
                        Collect anonymous usage data
                      </span>
                      <div
                        class="toggle-bar toggle-bar-primary"
                      >
                        <input
                          aria-checked="false"
                          id="checkForShare"
                          type="checkbox"
                        />
                        <span
                          class="toggle-handle toggle-handle-primary"
                          style="background-color: white;"
                        />
                      </div>
                    </label>
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Show agreement
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SettingsView should render when checking for updates 1`] = `
<body>
  <div>
    <div
      class="with-scrollbar"
    >
      <div
        class="content-container"
      >
        <div
          class="settings-pane-container"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Updates
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    disabled=""
                    type="button"
                  >
                    Checking...
                  </button>
                </div>
              </div>
              <p
                class="small text-muted"
              />
              <div
                class="toggle"
              >
                <label
                  for="checkForUpdates"
                >
                  <span
                    class="toggle-label"
                  >
                    Check for updates at startup
                  </span>
                  <div
                    class="toggle-bar toggle-bar-primary-toggled"
                  >
                    <input
                      aria-checked="true"
                      checked=""
                      id="checkForUpdates"
                      type="checkbox"
                    />
                    <span
                      class="toggle-handle toggle-handle-toggled toggle-handle-primary-toggled"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="card"
            id="app-sources"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    App sources
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Add source
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="card"
            id="app-sources"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Authentication
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Set
                     token
                  </button>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="small text-muted col"
                >
                  To access restricted app sources from Nordic Semiconductor, get an identity token from
                   
                  <a
                    class="tw-preflight tw-text-nordicBlue hover:tw-underline"
                    href="https://files.nordicsemi.com/ui/user_profile"
                    rel="noreferrer noopener"
                    target="_blank"
                  >
                    Nordic Semiconductor JFrog portal
                  </a>
                  .
                </div>
              </div>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Mainland China app server
                  </div>
                </div>
              </div>
              <p
                class="small text-muted"
              >
                For all publicly available apps, use the server
                 
                <a
                  class="tw-preflight tw-text-nordicBlue hover:tw-underline"
                  href="https://files.nordicsemi.cn/"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  https://files.nordicsemi.cn/
                </a>
                , which has a better connection in the People‘s Republic of China.
              </p>
              <div
                class="toggle"
              >
                <label>
                  <span
                    class="toggle-label"
                  >
                    Use Mainland China app server
                  </span>
                  <div
                    class="toggle-bar toggle-bar-primary"
                  >
                    <input
                      aria-checked="false"
                      type="checkbox"
                    />
                    <span
                      class="toggle-handle toggle-handle-primary"
                      style="background-color: white;"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Usage statistics
                  </div>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="toggle"
                  >
                    <label
                      for="checkForShare"
                    >
                      <span
                        class="toggle-label"
                      >
                        Collect anonymous usage data
                      </span>
                      <div
                        class="toggle-bar toggle-bar-primary"
                      >
                        <input
                          aria-checked="false"
                          id="checkForShare"
                          type="checkbox"
                        />
                        <span
                          class="toggle-handle toggle-handle-primary"
                          style="background-color: white;"
                        />
                      </div>
                    </label>
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Show agreement
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SettingsView should render with check for updates disabled 1`] = `
<body>
  <div>
    <div
      class="with-scrollbar"
    >
      <div
        class="content-container"
      >
        <div
          class="settings-pane-container"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Updates
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Check for updates
                  </button>
                </div>
              </div>
              <p
                class="small text-muted"
              />
              <div
                class="toggle"
              >
                <label
                  for="checkForUpdates"
                >
                  <span
                    class="toggle-label"
                  >
                    Check for updates at startup
                  </span>
                  <div
                    class="toggle-bar toggle-bar-primary"
                  >
                    <input
                      aria-checked="false"
                      id="checkForUpdates"
                      type="checkbox"
                    />
                    <span
                      class="toggle-handle toggle-handle-primary"
                      style="background-color: white;"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="card"
            id="app-sources"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    App sources
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Add source
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="card"
            id="app-sources"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Authentication
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Set
                     token
                  </button>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="small text-muted col"
                >
                  To access restricted app sources from Nordic Semiconductor, get an identity token from
                   
                  <a
                    class="tw-preflight tw-text-nordicBlue hover:tw-underline"
                    href="https://files.nordicsemi.com/ui/user_profile"
                    rel="noreferrer noopener"
                    target="_blank"
                  >
                    Nordic Semiconductor JFrog portal
                  </a>
                  .
                </div>
              </div>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Mainland China app server
                  </div>
                </div>
              </div>
              <p
                class="small text-muted"
              >
                For all publicly available apps, use the server
                 
                <a
                  class="tw-preflight tw-text-nordicBlue hover:tw-underline"
                  href="https://files.nordicsemi.cn/"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  https://files.nordicsemi.cn/
                </a>
                , which has a better connection in the People‘s Republic of China.
              </p>
              <div
                class="toggle"
              >
                <label>
                  <span
                    class="toggle-label"
                  >
                    Use Mainland China app server
                  </span>
                  <div
                    class="toggle-bar toggle-bar-primary"
                  >
                    <input
                      aria-checked="false"
                      type="checkbox"
                    />
                    <span
                      class="toggle-handle toggle-handle-primary"
                      style="background-color: white;"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Usage statistics
                  </div>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="toggle"
                  >
                    <label
                      for="checkForShare"
                    >
                      <span
                        class="toggle-label"
                      >
                        Collect anonymous usage data
                      </span>
                      <div
                        class="toggle-bar toggle-bar-primary"
                      >
                        <input
                          aria-checked="false"
                          id="checkForShare"
                          type="checkbox"
                        />
                        <span
                          class="toggle-handle toggle-handle-primary"
                          style="background-color: white;"
                        />
                      </div>
                    </label>
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Show agreement
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SettingsView should render with check for updates enabled 1`] = `
<body>
  <div>
    <div
      class="with-scrollbar"
    >
      <div
        class="content-container"
      >
        <div
          class="settings-pane-container"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Updates
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Check for updates
                  </button>
                </div>
              </div>
              <p
                class="small text-muted"
              />
              <div
                class="toggle"
              >
                <label
                  for="checkForUpdates"
                >
                  <span
                    class="toggle-label"
                  >
                    Check for updates at startup
                  </span>
                  <div
                    class="toggle-bar toggle-bar-primary-toggled"
                  >
                    <input
                      aria-checked="true"
                      checked=""
                      id="checkForUpdates"
                      type="checkbox"
                    />
                    <span
                      class="toggle-handle toggle-handle-toggled toggle-handle-primary-toggled"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="card"
            id="app-sources"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    App sources
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Add source
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="card"
            id="app-sources"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Authentication
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Set
                     token
                  </button>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="small text-muted col"
                >
                  To access restricted app sources from Nordic Semiconductor, get an identity token from
                   
                  <a
                    class="tw-preflight tw-text-nordicBlue hover:tw-underline"
                    href="https://files.nordicsemi.com/ui/user_profile"
                    rel="noreferrer noopener"
                    target="_blank"
                  >
                    Nordic Semiconductor JFrog portal
                  </a>
                  .
                </div>
              </div>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Mainland China app server
                  </div>
                </div>
              </div>
              <p
                class="small text-muted"
              >
                For all publicly available apps, use the server
                 
                <a
                  class="tw-preflight tw-text-nordicBlue hover:tw-underline"
                  href="https://files.nordicsemi.cn/"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  https://files.nordicsemi.cn/
                </a>
                , which has a better connection in the People‘s Republic of China.
              </p>
              <div
                class="toggle"
              >
                <label>
                  <span
                    class="toggle-label"
                  >
                    Use Mainland China app server
                  </span>
                  <div
                    class="toggle-bar toggle-bar-primary"
                  >
                    <input
                      aria-checked="false"
                      type="checkbox"
                    />
                    <span
                      class="toggle-handle toggle-handle-primary"
                      style="background-color: white;"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Usage statistics
                  </div>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="toggle"
                  >
                    <label
                      for="checkForShare"
                    >
                      <span
                        class="toggle-label"
                      >
                        Collect anonymous usage data
                      </span>
                      <div
                        class="toggle-bar toggle-bar-primary"
                      >
                        <input
                          aria-checked="false"
                          id="checkForShare"
                          type="checkbox"
                        />
                        <span
                          class="toggle-handle toggle-handle-primary"
                          style="background-color: white;"
                        />
                      </div>
                    </label>
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Show agreement
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SettingsView should render with last update check date 1`] = `
<body>
  <div>
    <div
      class="with-scrollbar"
    >
      <div
        class="content-container"
      >
        <div
          class="settings-pane-container"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Updates
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Check for updates
                  </button>
                </div>
              </div>
              <p
                class="small text-muted"
              >
                Last update check performed:
                 
                2017-02-03 13:41:36
              </p>
              <div
                class="toggle"
              >
                <label
                  for="checkForUpdates"
                >
                  <span
                    class="toggle-label"
                  >
                    Check for updates at startup
                  </span>
                  <div
                    class="toggle-bar toggle-bar-primary-toggled"
                  >
                    <input
                      aria-checked="true"
                      checked=""
                      id="checkForUpdates"
                      type="checkbox"
                    />
                    <span
                      class="toggle-handle toggle-handle-toggled toggle-handle-primary-toggled"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="card"
            id="app-sources"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    App sources
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Add source
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="card"
            id="app-sources"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Authentication
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Set
                     token
                  </button>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="small text-muted col"
                >
                  To access restricted app sources from Nordic Semiconductor, get an identity token from
                   
                  <a
                    class="tw-preflight tw-text-nordicBlue hover:tw-underline"
                    href="https://files.nordicsemi.com/ui/user_profile"
                    rel="noreferrer noopener"
                    target="_blank"
                  >
                    Nordic Semiconductor JFrog portal
                  </a>
                  .
                </div>
              </div>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Mainland China app server
                  </div>
                </div>
              </div>
              <p
                class="small text-muted"
              >
                For all publicly available apps, use the server
                 
                <a
                  class="tw-preflight tw-text-nordicBlue hover:tw-underline"
                  href="https://files.nordicsemi.cn/"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  https://files.nordicsemi.cn/
                </a>
                , which has a better connection in the People‘s Republic of China.
              </p>
              <div
                class="toggle"
              >
                <label>
                  <span
                    class="toggle-label"
                  >
                    Use Mainland China app server
                  </span>
                  <div
                    class="toggle-bar toggle-bar-primary"
                  >
                    <input
                      aria-checked="false"
                      type="checkbox"
                    />
                    <span
                      class="toggle-handle toggle-handle-primary"
                      style="background-color: white;"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="card-title h5"
                  >
                    Usage statistics
                  </div>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="toggle"
                  >
                    <label
                      for="checkForShare"
                    >
                      <span
                        class="toggle-label"
                      >
                        Collect anonymous usage data
                      </span>
                      <div
                        class="toggle-bar toggle-bar-primary"
                      >
                        <input
                          aria-checked="false"
                          id="checkForShare"
                          type="checkbox"
                        />
                        <span
                          class="toggle-handle toggle-handle-primary"
                          style="background-color: white;"
                        />
                      </div>
                    </label>
                  </div>
                </div>
                <div
                  class="col-auto"
                >
                  <button
                    class="btn btn-outline-primary"
                    type="button"
                  >
                    Show agreement
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
